# cli-arcade

./: .gitignore  MANIFEST.in  PYPI_README.md  README.md  cli.py  setup.cfg
game_classes/: highscores.py  ptk.py  tools.py
game_classes/game_template/: __init__.py  game.py
games/byte_bouncer/: game.py
games/escape_sequence/: __init__.py  game.py
games/prompt_hopper/: __init__.py  game.py
games/prompt_hopper/levels/: 0.json  1.json
games/star_ship/: game.py
games/terminal_tumble/: game.py
windows/: CHANGELOG.md  LICENSE  PYPI_README.md  README.md  cli.py  requirements.txt  setup.cfg
windows/game_classes/: __init__.py  game_base.py  menu.py  tools.py
windows/games/: __init__.py
windows/games/byte_bouncer/: __init__.py  game.py
windows/games/star_ship/: __init__.py  game.py
windows/games/terminal_tumble/: __init__.py  game.py
windows/web/: package.json  server.js
windows/web/public/: client.js  index.html
