[metadata]
name = cli-arcade
version = 2026.1.1
description = Collection of terminal CLI games
author = Bro Code Technologies LLC
author_email = info@brocodetechnologies.com
license = MIT
license_files =
    LICENSE
long_description = file: PYPI_README.md
long_description_content_type = text/markdown
url = https://github.com/Bro-Code-Technologies/cli_arcade/tree/main/windows
project_urls =
    Source = https://github.com/Bro-Code-Technologies/cli_arcade/tree/main/windows
    Issues = https://github.com/Bro-Code-Technologies/cli_arcade/tree/main/windows
    Documentation = https://github.com/Bro-Code-Technologies/cli_arcade/tree/main/windows
    Package = https://pypi.org/project/cli-arcade/
keywords =
    cli
    terminal
    arcade
    games
    curses
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Games/Entertainment

[options]
py_modules = cli
packages = find:
include_package_data = true
python_requires = >=3.8
install_requires =
    appdirs
    windows-curses; sys_platform == "win32"

[options.entry_points]
console_scripts =
    clia = cli:main
    cli-arcade = cli:main
